--- a/app/src/main/res/layout/registrook.xml
+++ b/app/src/main/res/layout/registrook.xml
@@ -7,12 +7,21 @@
     android:orientation="vertical"
     >
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40sp"
-        android:layout_gravity="center"
         android:orientation="vertical">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_height="200sp"
+            android:layout_width="200sp"
+            android:src="@drawable/ic_action_name" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,26 +29,34 @@
             android:textColor="@color/black"
             android:text="Registrado correctamente"
             android:textSize="45sp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp" />
+            android:gravity="center"
+            android:maxLines="2"
+            android:fontFamily="@font/inter_bold" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/gris"
             android:text="¡Bienvenido!"
+            android:fontFamily="@font/inter"
             android:textSize="45sp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp" />
+            android:layout_gravity="center"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
         <Button
             android:id="@+id/crearHab"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/white"
+            android:background="@drawable/fondo_azul_redondo"
+            android:fontFamily="@font/inter"
             android:text="CONTINUAR"
-            android:background="@color/azul"
-            />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
