--- a/app/src/main/res/layout/rpassword.xml
+++ b/app/src/main/res/layout/rpassword.xml
@@ -36,7 +36,7 @@
             android:id="@+id/IniSesionUsu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:backgroundTint=""
+            app:backgroundTint="@color/azul"
             android:inputType="textEmailAddress"
             android:fontFamily="@font/inter"
             android:hint="username@email.com"
